[tool.poetry]
name = "project-1-saygushev-m25-555"
version = "0.1.0"
description = ""
authors = ["Сайгушев Дамир <saigh06@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.13.2,<0.14.0"
